# data_news_scraper

./: .gitignore  README.md  ai_scraper.py  all_articles.csv  app.py  combined_news_articles.csv  data_news_articles.csv  news_app.py  news_collector.py  pyproject.toml  run_all.py
data/: all_articles.csv  combined_news_articles.csv  data_news_articles.csv
raw_content/: newsletter.pragmaticengineer.com_s_deepdives?utm_source=substack&utm_medium=menu&sort=top.txt  newsletter.pragmaticengineer.com_s_deepdives?utm_source=substack&utm_medium=menu.txt  www.bigdatawire.com_more-articles.txt  www.kdnuggets.com_tag_data-engineering.txt
src/: ai_scraper.py  app.py  news_collector.py
