[project]
name = "data-news-scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "pandas>=2.2.3",
    "streamlit>=1.38.0",
    "selenium>=4.25.0",
    "scrapegraphai>=1.25.0",
]
